--- a/Runtime/livekit.unity.Runtime.asmdef
+++ b/Runtime/livekit.unity.Runtime.asmdef
@@ -2,7 +2,12 @@
     "name": "LiveKit",
     "rootNamespace": "LiveKit",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+    "includePlatforms": [
+        "WindowsStandalone32",
+        "WindowsStandalone64",
+        "LinuxStandalone64"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
